* - Add multi drag and drop feature.
* ---19/05/11---
* - Add functions for animations (Benjamin). Could now save a animation into a gif file.
* - Improve screenshot menu by setting some buttons inactives depending the current state of screenshot creation.
* - Add combo box for size to screenshot menu.
* ---21/05/11---
* - A lot of improvement on screenshot menu (Benjamin). Settings are now independent of screenshot dialog. Default directory for output.
* - Add mnemonic label to screenshot menu buttons (Benjamin).
* ---22/05/11---
* - Benjamin redesign the entire menu popup to use the better GtkAction system. Now there's keybindings for menu and code is really beautiful and shorter.
* - Add grayscale option to screenshot menu (Benjamin).
* ---23/05/11---
* - Save the last rom opened and use it at startup if no rom is given.
* - Allow user to load another rom while running.
* - Refactor the entire macro creation to separate creation from writing as TilemAnimation does. Code is cleaner and simply better.
* ---25/05/11---
* - Add an option to change animation speed. The current printed animation is updated on change.
* ---26/05/11---
* - Add an option to change foreground and background color. No visual feedback.
* ---27/05/11---
* - Correct some stuff (see mailing list to know why). And add a palette setter in animation.c and a visual feedback when foreground/background color are changed.
* - Some other minor improvement.
* ---19/09/11---
* - Restart working on tilem2 after holidays:)
* - Add new file getvar.c to handle get var function (receiving var from calc to PC).
* ---20/09/11---
* - Some improvement to the rcvmenu. 
* ---22/09/11---
* - Add the ti83pfr.skn file. This skin is for ti83plus.fr. The creator is Claude Clerc (aka claudiux). He donates the skin under GPL v3+ licence.Thanks to him !!!
* ---11/10/11---
* - Correct the getvar.c code to work correctly. Add columns to the tree view.
* - Add app receive handling. Set index column invisible.
*/
