@@ -252,5 +252,8 @@
 * ---11/10/11---
 * - Correct the getvar.c code to work correctly. Add columns to the tree view.
 * - Add app receive handling. Set index column invisible.
+* ---12/10/11---
+* - Some corrections : receive dialog is transcient. Receive dialog is not destroyed when closed just hided. New refresh button to refresh var/app list.
+* - Use a separate thread to receive files.
 */
 
